--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "lint:oas": "spectral lint -r @stoplight/spectral:oas 'openapi/**/*.yaml'",
+    "lint:oas": "spectral lint 'openapi/**/*.yaml'",
     "validate:examples": "node .github/validate-examples.mjs",
+    "map:off": "node scripts/off-map.mjs",
+    "generate:examples": "npm run map:off && node .github/validate-examples.mjs",
     "docs:build": "mkdocs build --strict"
   },
   "devDependencies": {
