--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install Python deps (MkDocs + YAML lint)
         run: |
           python -m pip install --upgrade pip
-          pip install mkdocs mkdocs-material yamllint
+          pip install mkdocs mkdocs-material mkdocs-mermaid2-plugin mkdocs-git-revision-date-localized-plugin yamllint
 
       - name: Install Node CLI deps (Spectral, markdownlint) + ajv libs
         run: |
