--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,7 +26,9 @@ plugins:
   - mermaid2:
       javascript: ../node_modules/mermaid/dist/mermaid.esm.min.mjs
   - git-revision-date-localized:
-      enable_creation_date: true
+      fallback_to_build_date: true
+  - git-committers:
+      enabled: false
 
 nav:
   - Overview:
