fix(off): map overlay to universal schema

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,7 +26,7 @@ plugins:
   - mermaid2:
       javascript: ../node_modules/mermaid/dist/mermaid.esm.min.mjs
   - git-revision-date-localized:
-      enable_creation_date: true
+      fallback_to_build_date: true
 
 nav:
   - Overview:
@@ -69,6 +69,7 @@ nav:
           - ops/playbooks/_etl-checklist.md
   - Process:
       - process/600-adrs/index.md
+      - process/600-adrs/0001-use-adrs.md
       - process/605-ai-collaboration.md
       - process/610-contributing.md
       - process/620-versioning-release.md
