--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,11 +30,13 @@ jobs:
           node-version: "20"
           cache: "npm"
 
-      - name: Install dependencies
+      - name: Install deps (Node)
+        run: npm ci
+
+      - name: Install deps (Python)
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install -U pip
           pip install -r requirements.txt
-          npm ci
 
       # ---------- Docs build ----------
       - name: Build MkDocs (strict)
@@ -67,4 +69,7 @@ jobs:
       # ---------- JSON Schema validation ----------
       - name: Validate against schemas (ajv)
         run: npm run schema:validate
+
+      - name: Run tests
+        run: pytest -q
 
