--- a/package.json
+++ b/package.json
@@ -2,18 +2,25 @@
   "name": "circl-docs",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "lint:oas": "spectral lint 'openapi/**/*.yaml'",
     "map:off": "node scripts/off-map.mjs",
     "schema:validate": "for s in schemas/**/*.json; do for d in examples/**/*.json; do ajv validate --spec=draft2020 --all-errors --strict=false --validate-formats=false -s \"$s\" -d \"$d\"; done; done",
     "generate:examples": "npm run map:off && npm run schema:validate",
-    "docs:build": "mkdocs build --strict"
+    "docs:build": "mkdocs build --strict",
+    "map:off:live": "node scripts/map.mjs --source off --barcode 5449000000996 --schema schemas/universal/product.json --overlay schemas/overlays/off/product.overlay.json --out /tmp/off.json --debug",
+    "map:off:local": "node scripts/map.mjs --source off --in examples/off/product.sample.json --schema schemas/universal/product.json --overlay schemas/overlays/off/product.overlay.json --out /tmp/off.local.json --debug",
+    "map:ifixit:local": "node scripts/map.mjs --source ifixit --in examples/ifixit/guide.sample.json --schema schemas/universal/product.json --overlay schemas/overlays/ifixit/product.overlay.json --out /tmp/ifixit.json --debug",
+    "map:ebay:local": "node scripts/map.mjs --source ebay --in examples/ebay/product.sample.json --schema schemas/universal/product.json --overlay schemas/overlays/ebay/product.overlay.json --out /tmp/ebay.json --debug",
+    "map:lot:local": "node scripts/map.mjs --source lot --in examples/lot/item.sample.json --schema schemas/universal/product.json --overlay schemas/overlays/lot/product.overlay.json --out /tmp/lot.json --debug"
   },
   "devDependencies": {
     "@stoplight/spectral-cli": "^6.15.0",
     "ajv": "^8.17.1",
     "ajv-cli": "^5.0.0",
     "ajv-formats": "^3.0.1",
+    "dotenv": "^16.4.5",
     "glob": "^11.0.0",
     "markdownlint-cli": "^0.41.0"
   }
