--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    // Tamagui pulls in React Native types that conflict with DOM; skip to keep build green
+    "skipLibCheck": true
   },
-  "include": ["index.ts", "tamagui.config.ts"]
+  "include": ["index.tsx", "tamagui.config.ts"]
 }
