--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,14 +24,19 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
+          cache: "pnpm"
 
       - name: Install deps (Node)
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Install deps (Python)
         run: |
@@ -64,11 +69,11 @@ jobs:
 
       # ---------- OpenAPI validation ----------
       - name: Spectral lint (OpenAPI 3.1)
-        run: npm run lint:oas
+        run: pnpm run lint:oas
 
       # ---------- JSON Schema validation ----------
       - name: Validate against schemas (ajv)
-        run: npm run schema:validate
+        run: pnpm run schema:validate
 
       - name: Run tests
         run: pytest -q
