--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,8 +2,8 @@
   "name": "@circl/ui",
   "version": "0.0.1",
   "private": true,
-  "main": "index.ts",
-  "types": "index.ts",
+  "main": "index.tsx",
+  "types": "index.tsx",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "lint": "eslint .",
