--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,11 +10,14 @@
     "test": "vitest --passWithNoTests"
   },
   "dependencies": {
-    "tamagui": "^1.110.0",
     "react": "^18.2.0"
+  },
+  "peerDependencies": {
+    "react-native": "*"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
+    "@types/react-native": "^0.73.0",
     "typescript": "^5.4.0",
     "vitest": "^1.5.0"
   }
