chore: add changelog fragments infrastructure

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,4 +88,6 @@ nav:
   - Architecture:
       - ADRs: adr/index.md
   - Releases: releases.md
+  - Contributing:
+      - Changelog fragments: contributing/changelog.md
 
