ci: run connector tests directly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,5 +124,5 @@ jobs:
           python -m pip install -U pip
           pip install -r requirements.txt
       - name: Run connector smoke tests
-        run: make test-connectors CONNECTOR=${{ matrix.connector }}
+        run: pytest -q tests/connectors/${{ matrix.connector }}
 
