--- a/.github/workflows/release-compile-changelog.yml
+++ b/.github/workflows/release-compile-changelog.yml
@@ -1,10 +1,8 @@
 name: release-compile-changelog
 
 on:
-  workflow_dispatch:
   push:
-    tags:
-      - 'v*'
+    branches: [main]
 
 jobs:
   compile:
@@ -16,16 +14,17 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-      - name: Compile changelog
-        run: RUN_MODE=write python scripts/compile_changelog.py
+      - name: Build changelog
+        run: python scripts/build_changelog.py
       - name: Commit and push
         run: |
           set -euo pipefail
+          if git diff --quiet; then
+            echo 'No fragments to compile'
+            exit 0
+          fi
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add CHANGELOG.md
-          if git commit -m "chore: compile changelog"; then
-            git push
-          else
-            echo "No changes to commit"
-          fi
+          git add PROJECT_CHANGELOG.md changelog || true
+          git commit -m "chore(changelog): compile fragments"
+          git push
