--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,7 @@
   "main": "index.tsx",
   "types": "index.tsx",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "node scripts/build.mjs",
     "lint": "eslint .",
     "test": "vitest --passWithNoTests"
   },
