--- a/.github/workflows/release-compile-changelog.yml
+++ b/.github/workflows/release-compile-changelog.yml
@@ -1,30 +1,34 @@
 name: release-compile-changelog
-
 on:
   push:
-    branches: [main]
-
+    branches: [ main ]
+    # Avoid re-triggering on the bot's own compile commit
+    paths-ignore:
+      - 'PROJECT_CHANGELOG.md'
+permissions:
+  contents: write
+concurrency:
+  group: changelog-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   compile:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+        with: { fetch-depth: 0 }
       - uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-      - name: Build changelog
-        run: python scripts/build_changelog.py
-      - name: Commit and push
+      - name: Compile changelog
         run: |
           set -euo pipefail
-          if git diff --quiet; then
-            echo 'No fragments to compile'
-            exit 0
+          python3 scripts/build_changelog.py --fragments changelog --out PROJECT_CHANGELOG.md
+      - name: Commit changelog if changed
+        run: |
+          if ! git diff --quiet PROJECT_CHANGELOG.md; then
+            git config user.name "github-actions[bot]"
+            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+            git add PROJECT_CHANGELOG.md
+            git commit -m "chore(changelog): compile fragments [skip ci]"
+            git push
+          else
+            echo "No changes to PROJECT_CHANGELOG.md"
           fi
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add PROJECT_CHANGELOG.md changelog || true
-          git commit -m "chore(changelog): compile fragments"
-          git push
