--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "map:off:local": "node scripts/map.mjs --source off --in examples/off/product.sample.json --schema schemas/universal/product.json --overlay schemas/overlays/off/product.overlay.json --out /tmp/off.local.json --debug",
     "map:ifixit:local": "node scripts/map.mjs --source ifixit --in examples/ifixit/guide.sample.json --schema schemas/universal/product.json --overlay schemas/overlays/ifixit/product.overlay.json --out /tmp/ifixit.json --debug",
     "map:ebay:local": "node scripts/map.mjs --source ebay --in examples/ebay/product.sample.json --schema schemas/universal/product.json --overlay schemas/overlays/ebay/product.overlay.json --out /tmp/ebay.json --debug",
-    "map:lot:local": "node scripts/map.mjs --source lot --in examples/lot/item.sample.json --schema schemas/universal/product.json --overlay schemas/overlays/lot/product.overlay.json --out /tmp/lot.json --debug"
+    "map:lot:local": "node scripts/map.mjs --source lot --in examples/lot/item.sample.json --schema schemas/universal/product.json --overlay schemas/overlays/lot/product.overlay.json --out /tmp/lot.json --debug",
+    "routes": "tsx scripts/list-app-routes.ts"
   },
   "devDependencies": {
     "@stoplight/spectral-cli": "^6.15.0",
@@ -29,6 +30,7 @@
     "glob": "^11.0.0",
     "markdownlint-cli": "^0.41.0",
     "turbo": "^1.13.0",
+    "tsx": "^4.7.0",
     "typescript": "^5.4.0",
     "eslint": "^8.57.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
