--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest run --exclude tests/e2e/**",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "test:connectors": "tsx scripts/run-selftests.ts"
   },
   "dependencies": {
     "next": "^14.2.3",
@@ -19,7 +20,9 @@
     "@circl/utils": "workspace:*",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-tabs": "^1.0.4",
-    "clsx": "^2.0.0"
+    "clsx": "^2.0.0",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
@@ -28,6 +31,8 @@
     "@playwright/test": "^1.44.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "junit-report-builder": "^5.1.1",
+    "tsx": "^4.7.0"
   }
 }
