--- a/.github/workflows/cloudflare-pages.yml
+++ b/.github/workflows/cloudflare-pages.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: 18
           cache: 'pnpm'
       - name: Install deps
-        run: pnpm -w install
+        run: pnpm -w install --no-frozen-lockfile
       - name: Build web app
         working-directory: apps/web
         run: pnpm build
